--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^1.3.0",
     "astro": "^1.9.0"
+  },
+  "devDependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "cheerio": "^1.0.0-rc.12",
+    "form-data": "^4.0.0",
+    "handlebars": "^4.7.7",
+    "mailgun.js": "^8.0.6",
+    "postmark": "^3.0.15"
   }
 }
