--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
-  "name": "@example/basics",
+  "name": "otg-soltuons-v2",
   "type": "module",
   "version": "0.0.1",
-  "private": true,
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^1.3.0",
-    "astro": "^1.9.0"
+    "@tailwindcss/vite": "^4.1.10",
+    "astro": "^5.10.0",
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
-    "@sendgrid/mail": "^7.7.0",
-    "cheerio": "^1.0.0-rc.12",
-    "form-data": "^4.0.0",
-    "handlebars": "^4.7.7",
-    "mailgun.js": "^8.0.6",
-    "postmark": "^3.0.15"
+    "prettier": "^3.5.3",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
